# sowba

./: .gitignore  README.md  README.rst  commands.py  config.json  pyproject.toml  requirements.txt  setup.py
app/: core.py  main.py
app/security/: __init__.py  acl.py  routes.py  utils.py
app/storage/: __init__.py  memory.py
cookiecutter/app/default/{{cookiecutter.app}}/: config.json  pyproject.toml
cookiecutter/app/default/{{cookiecutter.app}}/{{cookiecutter.app}}/services/items/: __init__.py
cookiecutter/app/default/{{cookiecutter.app}}/{{cookiecutter.app}}/services/items/tests/: test_items.py
cookiecutter/app/default/{{cookiecutter.app}}/{{cookiecutter.app}}/services/users/: model.py
cookiecutter/auth/: cookiecutter.json
cookiecutter/resource/: cookiecutter.json
cookiecutter_bckp/project/: cookiecutter.json
examples/: model.py
snippets/: abc_dev.py  config-bckp.json  config.json  dev.py  lru_cache.py  rocksdb_storage.py
snippets/compass/: config.json  pyproject.toml
snippets/netizen/: config.json  pyproject.toml
snippets/netizen/netizen/services/items/: model.py
snippets/netizen/netizen/services/members/: model.py
snippets/netizen/netizen/services/members/endpoints/: utils.py
snippets/soutra/: config.json  pyproject.toml
snippets/sowba_app/: config.json  pyproject.toml
sowba/: command.py  commands.py  main.py  tools.py
sowba/cli/: __init__.py  auth.py  config.py  plugin.py  service.py  stream.py  utils.py  vars.py
sowba/core/: __init__.py  application.py  const.py  crud.py  decorator.py  model.py  path.py  settings.py  utils.py  (+1 more)
src/: core.py  main.py
(+82 files in other folders)
