[tool.poetry]
name = "sowba"
version = "0.1.0"
description = ""
authors = ["Sekou <sekou.omar.kone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.61.0"}
uvicorn = "^0.11.8"
pendulum = "^2.1.2"
typer = {extras = ["all"], version = "^0.3.1"}
email-validator = "^1.1.1"
python-rocksdb = "^0.7.0"
devtools = {extras = ["pygments"], version = "^0.6"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
isort = "^5.3.0"
black = "^19.10b0"
mypy = "^0.782"
ipython = "^7.17.0"
devtools = "^0.6"
pygments = "^2.6.1"


[tool.poetry.scripts]
sowba = 'sowba.cli:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
